--- a/cursos.html
+++ b/cursos.html
@@ -7,12 +7,10 @@
     <meta charset="utf-8">
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Sedna - A Free HTML5/CSS3 website by Peter Finlan</title>
+    <title>Incubadora Caracol</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/jquery.fancybox.css">
@@ -32,15 +30,9 @@
         <section class="navigation">
             <header>
                 <div class="header-content">
-                    <div class="logo"><a href="#"><img src="img/logo.png" alt="Sedna logo"></a></div>
+                    <div class="logo"><a href="index.html"><img src="img/logo.png" alt="Sedna logo"></a></div>
                     <div class="header-nav">
                         <nav>
-                            <ul class="primary-nav">
-                                <li><a href="#features">Features</a></li>
-                                <li><a href="#assets">Assets</a></li>
-                                <li><a href="#blog">Blog</a></li>
-                                <li><a href="#download">Download</a></li>
-                            </ul>
                             <ul class="member-actions">
                                 <li><a href="#download" class="login btn-white btn-small">Acceder</a></li>
                                 <li><a href="#download" class="btn-small">Regístrate</a></li>
@@ -80,12 +72,12 @@
                 <div class="col-md-4">
                     <article class="blog-post">
                         <figure>
-                            <a href="img/blog-img-01.jpg" class="single_image">
+                            <a href="img/coc.jpeg" class="single_image">
                                 <div class="blog-img-wrap">
                                     <div class="overlay">
                                         <i class="fa fa-search"></i>
                                     </div>
-                                    <img src="img/blog-img-01.jpg" alt="Sedna blog image"/>
+                                    <img src="img/coc.jpeg" alt="Sedna blog image"/>
                                 </div>
                             </a>
                             <figcaption>
@@ -97,12 +89,12 @@
                 <div class="col-md-4">
                     <article class="blog-post">
                         <figure>
-                            <a href="img/blog-img-02.jpg" class="single_image">
+                            <a href="img/tech.jpg" class="single_image">
                                 <div class="blog-img-wrap">
                                     <div class="overlay">
                                         <i class="fa fa-search"></i>
                                     </div>
-                                    <img src="img/blog-img-02.jpg" alt="Sedna blog image"/>
+                                    <img src="img/tech.jpg" alt="Sedna blog image"/>
                                 </div>
                             </a>
                             <figcaption>
@@ -114,12 +106,12 @@
                 <div class="col-md-4">
                     <article class="blog-post">
                         <figure>
-                            <a href="img/blog-img-03.jpg" class="single_image">
+                            <a href="img/ed.jpg" class="single_image">
                                 <div class="blog-img-wrap">
                                     <div class="overlay">
                                         <i class="fa fa-search"></i>
                                     </div>
-                                    <img src="img/blog-img-03.jpg" class="single_image" alt="Sedna blog image"/>
+                                    <img src="img/ed.jpg" class="single_image" alt="Sedna blog image"/>
                                 </div>
                             </a>
                             <figcaption>
@@ -131,12 +123,12 @@
                 <div class="col-md-4">
                     <article class="blog-post">
                         <figure>
-                            <a href="img/blog-img-01.jpg" class="single_image">
+                            <a href="img/dep.jpg" class="single_image">
                                 <div class="blog-img-wrap">
                                     <div class="overlay">
                                         <i class="fa fa-search"></i>
                                     </div>
-                                    <img src="img/blog-img-01.jpg" alt="Sedna blog image"/>
+                                    <img src="img/dep.jpg" alt="Sedna blog image"/>
                                 </div>
                             </a>
                             <figcaption>
@@ -148,12 +140,12 @@
                 <div class="col-md-4">
                     <article class="blog-post">
                         <figure>
-                            <a href="img/blog-img-02.jpg" class="single_image">
+                            <a href="img/sal.jpg" class="single_image">
                                 <div class="blog-img-wrap">
                                     <div class="overlay">
                                         <i class="fa fa-search"></i>
                                     </div>
-                                    <img src="img/blog-img-02.jpg" alt="Sedna blog image"/>
+                                    <img src="img/sal.jpg" alt="Sedna blog image"/>
                                 </div>
                             </a>
                             <figcaption>
@@ -165,12 +157,12 @@
                 <div class="col-md-4">
                     <article class="blog-post">
                         <figure>
-                            <a href="img/blog-img-03.jpg" class="single_image">
+                            <a href="img/man.jpg" class="single_image">
                                 <div class="blog-img-wrap">
                                     <div class="overlay">
                                         <i class="fa fa-search"></i>
                                     </div>
-                                    <img src="img/blog-img-03.jpg" class="single_image" alt="Sedna blog image"/>
+                                    <img src="img/man.jpg" class="single_image" alt="Sedna blog image"/>
                                 </div>
                             </a>
                             <figcaption>
@@ -182,52 +174,7 @@
             </div>
         </div>
     </section>
-    <section class="testimonial-slider section-padding text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="flexslider">
-                        <ul class="slides">
-                            <li>
-                                <div class="avatar"><img src="img/avatar.jpg" alt="Sedna Testimonial Avatar"></div>
-                                <h2>"Lorem ipsum dolor sit amet, nullam lucia nisi."</h2>
-                                <p class="author">Peter Finlan, Product Designer.</p>
-                            </li>
-                            <li>
-                                <div class="avatar"><img src="img/mani.jpg" alt="Sedna Testimonial Avatar"></div>
-                                <h2>"Nunc vel maximus purus. Nullam ac urna ornare."</h2>
-                                <p class="author">Manoela Ilic, Founder @ Codrops.</p>
-                            </li>
-                            <li>
-                                <div class="avatar"><img src="img/130.jpg" alt="Sedna Testimonial Avatar"></div>
-                                <h2>"Nullam ac urna ornare, ultrices nisl ut, lacinia nisi."</h2>
-                                <p class="author">Blaz Robar, Pixel Guru</p>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="sign-up section-padding text-center" id="download">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-md-offset-3">
-                    <h3>Get started with Sedna, absolutely free</h3>
-                    <p>Grab your copy today, exclusively from Codrops</p>
-                    <form class="signup-form" action="#" method="POST" role="form">
-                        <div class="form-input-group">
-                            <i class="fa fa-envelope"></i><input type="text" class="" placeholder="Enter your email" required>
-                        </div>
-                        <div class="form-input-group">
-                            <i class="fa fa-lock"></i><input type="text" class="" placeholder="Enter your password" required>
-                        </div>
-                        <button type="submit" class="btn-fill sign-up-btn">Sign up for free</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
+    
     <section class="to-top">
         <div class="container">
             <div class="row">
@@ -243,20 +190,14 @@
                 <div class="col-md-7">
                     <div class="footer-links">
                         <ul class="footer-group">
-                            <li><a href="#">Features</a></li>
-                            <li><a href="#">Pricing</a></li>
-                            <li><a href="#">Sign up</a></li>
-                            <li><a href="http://tympanus.net/codrops/licensing/">Licence</a></li>
-                            <li><a href="http://tympanus.net/codrops/">Codrops</a></li>
-                            <li><a href="http://www.peterfinlan.com/">Peter Finlan</a></li>
+                            <li><a href="index.html">Inicio</a></li>
                         </ul>
-                        <p>Copyright © 2015 <a href="#">Sedna</a><br>
-                        <a href="http://tympanus.net/codrops/licensing/">Licence</a> | Crafted with <span class="fa fa-heart pulse2"></span> by <a href="http://www.peterfinlan.com/">Peter Finlan</a>.</p>
+                        <p>Copyright © 2015 <a href="#">Alejandro Henkel</a><br>
                     </div>
                 </div>
                 <div class="social-share">
-                    <p>Share Sedna with your friends</p>
-                    <a href="https://twitter.com/peterfinlan" class="twitter-share"><i class="fa fa-twitter"></i></a> <a href="#" class="facebook-share"><i class="fa fa-facebook"></i></a>
+                    <p>Síguenos en Redes Sociales</p>
+                    <a href="https://twitter.com/" class="twitter-share"><i class="fa fa-twitter"></i></a> <a href="#" class="facebook-share"><i class="fa fa-facebook"></i></a>
                 </div>
             </div>
         </div>
