--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <meta charset="utf-8">
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Sedna - A Free HTML5/CSS3 website by Peter Finlan</title>
+    <title>Incubadora Caracol</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/jquery.fancybox.css">
@@ -36,10 +34,9 @@
                     <div class="header-nav">
                         <nav>
                             <ul class="primary-nav">
-                                <li><a href="#features">Features</a></li>
-                                <li><a href="#assets">Assets</a></li>
-                                <li><a href="#blog">Blog</a></li>
-                                <li><a href="#download">Download</a></li>
+                                <li><a href="#assets">Misión</a></li>
+                                <li><a href="#cursos">Cursos</a></li>
+                                <li><a href="#testimonios">Testimonios</a></li>
                             </ul>
                             <ul class="member-actions">
                                 <li><a href="#download" class="login btn-white btn-small">Acceder</a></li>
@@ -59,12 +56,12 @@
                     <div class="hero-content text-center">
                         <img src="img/logo.png" alt="">
                         <p class="intro">Slogan grande de la incubadora caracol. Slogan grande de la incubadora caracol. Slogan grande de la incubadora.</p>
-                        <a href="#" class="btn btn-fill btn-large btn-margin-right">Download</a> <a href="#" class="btn btn-accent btn-large">Learn more</a>
+                        <a href="#cursos" class="btn btn-fill btn-large btn-margin-right">Cursos</a> 
                     </div>
                 </div>
             </div>
         </div>
-        <div class="down-arrow floating-arrow"><a href="#"><i class="fa fa-angle-down"></i></a></div>
+        <div class="down-arrow floating-arrow"><a href="#assets"><i class="fa fa-angle-down"></i></a></div>
     </section>
     <section class="features-extra section-padding" id="assets">
         <div class="container">
@@ -83,14 +80,14 @@
         <div class="macbook-wrap wp3"></div>
         <div class="responsive-feature-img"><img src="img/macbook-pro.png" alt="responsive devices"></div>
     </section>
-    <section class="hero-strip section-padding parallax-window">
+    <section class="hero-strip section-padding parallax-window" id="cursos">
         <div class="container">
             <div class="col-md-12 text-center">
                 <h2>
                 Mira los cursos
                 </h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ea, quasi eum non, nemo, iusto molestiae earum.</p>
-                <a href="#" class="btn btn-ghost btn-accent btn-large">Ver Cursos</a>
+                <a href="cursos.html" class="btn btn-ghost btn-accent btn-large">Ver Cursos</a>
                 <div class="logo-placeholder floating-logo"><img src="img/img1.png" alt="Sketch Logo"></div>
             </div>
         </div>
@@ -99,83 +96,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3>Showcase your smashing product with Sedna</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
-                    <h5>EXCLUSIVE TO CODROPS</h5>
-                    <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
-                <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
-                    <h5>SPREADING PIXELS AROUND THE WORLD</h5>
-                    <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <br><br>
+                    <h3>Testimonios</h3>
                 </div>
             </div>
         </div>
     </section>
-    <section class="blog text-center">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-4">
-                    <article class="blog-post">
-                        <figure>
-                            <a href="img/blog-img-01.jpg" class="single_image">
-                                <div class="blog-img-wrap">
-                                    <div class="overlay">
-                                        <i class="fa fa-search"></i>
-                                    </div>
-                                    <img src="img/blog-img-01.jpg" alt="Sedna blog image"/>
-                                </div>
-                            </a>
-                            <figcaption>
-                            <h2><a href="#" class="blog-category" data-toggle="tooltip" data-placement="top" data-original-title="See more posts">Product</a></h2>
-                            <p><a href="#" class="blog-post-title">Getting started with Sedna <i class="fa fa-angle-right"></i></a></p>
-                            </figcaption>
-                        </figure>
-                    </article>
-                </div>
-                <div class="col-md-4">
-                    <article class="blog-post">
-                        <figure>
-                            <a href="img/blog-img-02.jpg" class="single_image">
-                                <div class="blog-img-wrap">
-                                    <div class="overlay">
-                                        <i class="fa fa-search"></i>
-                                    </div>
-                                    <img src="img/blog-img-02.jpg" alt="Sedna blog image"/>
-                                </div>
-                            </a>
-                            <figcaption>
-                            <h2><a href="#" class="blog-category" data-toggle="tooltip" data-placement="top" data-original-title="See more posts">Technology</a></h2>
-                            <p><a href="#" class="blog-post-title">Why IE8 support is deminishing <i class="fa fa-angle-right"></i></a></p>
-                            </figcaption>
-                        </figure>
-                    </article>
-                </div>
-                <div class="col-md-4">
-                    <article class="blog-post">
-                        <figure>
-                            <a href="img/blog-img-03.jpg" class="single_image">
-                                <div class="blog-img-wrap">
-                                    <div class="overlay">
-                                        <i class="fa fa-search"></i>
-                                    </div>
-                                    <img src="img/blog-img-03.jpg" class="single_image" alt="Sedna blog image"/>
-                                </div>
-                            </a>
-                            <figcaption>
-                            <h2><a href="#" class="blog-category" data-toggle="tooltip" data-placement="top" data-original-title="See more posts">Product</a></h2>
-                            <p><a href="#" class="blog-post-title">Sedna tutorial: How to begin your <i class="fa fa-angle-right"></i></a></p>
-                            </figcaption>
-                        </figure>
-                    </article>
-                </div>
-                <a href="#" class="btn btn-ghost btn-accent btn-small">More news</a>
-            </div>
-        </div>
-    </section>
-    <section class="testimonial-slider section-padding text-center">
+    
+    <section class="testimonial-slider section-padding text-center" id="testimonios">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -184,17 +112,17 @@
                             <li>
                                 <div class="avatar"><img src="img/avatar.jpg" alt="Sedna Testimonial Avatar"></div>
                                 <h2>"Lorem ipsum dolor sit amet, nullam lucia nisi."</h2>
-                                <p class="author">Peter Finlan, Product Designer.</p>
+                                <p class="author">Mauro, Estudiante.</p>
                             </li>
                             <li>
                                 <div class="avatar"><img src="img/mani.jpg" alt="Sedna Testimonial Avatar"></div>
                                 <h2>"Nunc vel maximus purus. Nullam ac urna ornare."</h2>
-                                <p class="author">Manoela Ilic, Founder @ Codrops.</p>
+                                <p class="author">María, Socia.</p>
                             </li>
                             <li>
                                 <div class="avatar"><img src="img/130.jpg" alt="Sedna Testimonial Avatar"></div>
                                 <h2>"Nullam ac urna ornare, ultrices nisl ut, lacinia nisi."</h2>
-                                <p class="author">Blaz Robar, Pixel Guru</p>
+                                <p class="author">David, Beneficiario</p>
                             </li>
                         </ul>
                     </div>
@@ -206,16 +134,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
-                    <h3>Get started with Sedna, absolutely free</h3>
-                    <p>Grab your copy today, exclusively from Codrops</p>
+                    <h3>Eres colaborador?</h3>
+                    <p>Accesa en este sitio</p>
                     <form class="signup-form" action="#" method="POST" role="form">
                         <div class="form-input-group">
-                            <i class="fa fa-envelope"></i><input type="text" class="" placeholder="Enter your email" required>
+                            <i class="fa fa-envelope"></i><input type="text" class="" placeholder="Ingresa tu mail" required>
                         </div>
                         <div class="form-input-group">
-                            <i class="fa fa-lock"></i><input type="text" class="" placeholder="Enter your password" required>
+                            <i class="fa fa-lock"></i><input type="text" class="" placeholder="Ingresa tu contraseña" required>
                         </div>
-                        <button type="submit" class="btn-fill sign-up-btn">Sign up for free</button>
+                        <button type="submit" class="btn-fill sign-up-btn">Acceder</button>
                     </form>
                 </div>
             </div>
@@ -236,20 +164,16 @@
                 <div class="col-md-7">
                     <div class="footer-links">
                         <ul class="footer-group">
-                            <li><a href="#">Features</a></li>
-                            <li><a href="#">Pricing</a></li>
-                            <li><a href="#">Sign up</a></li>
-                            <li><a href="http://tympanus.net/codrops/licensing/">Licence</a></li>
-                            <li><a href="http://tympanus.net/codrops/">Codrops</a></li>
-                            <li><a href="http://www.peterfinlan.com/">Peter Finlan</a></li>
+                            <li><a href="#assets">Misión</a></li>
+                            <li><a href="#cursos">Cursos</a></li>
+                            <li><a href="#testimonios">Testimonios</a></li>
                         </ul>
-                        <p>Copyright © 2015 <a href="#">Sedna</a><br>
-                        <a href="http://tympanus.net/codrops/licensing/">Licence</a> | Crafted with <span class="fa fa-heart pulse2"></span> by <a href="http://www.peterfinlan.com/">Peter Finlan</a>.</p>
+                        <p>Copyright © 2015 <a href="#">Alejandro Henkel</a><br>
                     </div>
                 </div>
                 <div class="social-share">
-                    <p>Share Sedna with your friends</p>
-                    <a href="https://twitter.com/peterfinlan" class="twitter-share"><i class="fa fa-twitter"></i></a> <a href="#" class="facebook-share"><i class="fa fa-facebook"></i></a>
+                    <p>Síguenos en Redes Sociales</p>
+                    <a href="https://twitter.com/" class="twitter-share"><i class="fa fa-twitter"></i></a> <a href="#" class="facebook-share"><i class="fa fa-facebook"></i></a>
                 </div>
             </div>
         </div>
